[package]
name = "nespile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nespile_macros = { path = "../nespile_macros" }
binrw = "0.14.0"
clap = { version = "4.5.7", features = ["derive"] }
modular-bitfield = "0.11.2"
subenum = "1.1.2"
thiserror = "1.0.61"
